--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -265,15 +265,16 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
+            android:id="@+id/btnDatHang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TIẾN HÀNH ĐẶT HÀNG"
-            app:layout_constraintTop_toBottomOf="@+id/textView12"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="20sp"
-            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
             android:background="#F44336"
-            android:layout_marginTop="10dp"/>
+            android:text="TIẾN HÀNH ĐẶT HÀNG"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
