--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -162,14 +162,16 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"/>
+
         <Button
+            android:id="@+id/btnHire"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="HIRE ME"
             android:layout_marginTop="50dp"
             android:backgroundTint="#F44336"
-            android:textSize="22sp"
-            android:textColor="@color/white"/>
+            android:text="HIRE ME"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
     </LinearLayout>
 
